--- a/movieTemplate.html
+++ b/movieTemplate.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.min.css" rel="stylesheet">
+        <link href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap.min.css" rel="stylesheet">
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.0.7/angular.min.js"></script>
 <style>
 li.movie {
@@ -62,6 +62,13 @@ ul.ratings{
     color: white;
     list-style-type: none;
     float: left;
+}
+.poster:hover{
+    width: 300px;
+    max-width: none;
+}
+.poster{
+    width: 150px;
 }
 .searchBox {
     margin: 25px;
@@ -148,7 +155,7 @@ function MoviesCtrl($scope) {
                         <div class="row">
                             <div class="span2">
                                 <a href="{{makeWikiLink(movie.title+' film '+omdb.Year)}}" target="_blank" ng-show="omdb">
-                                    <img src="{{omdb.Poster}}" ng-show="omdb.Poster && omdb.Poster != 'N/A'" width="150" />
+                                    <img src="{{omdb.Poster}}" ng-show="omdb.Poster && omdb.Poster != 'N/A'" class="poster"/>
                                 </a>
                                 <ul class="ratings" ng-show="omdb">
                                     <a href="{{omdbLink}}" target="_blank"><li class="sticker imdb">
