--- a/movieTemplate.html
+++ b/movieTemplate.html
@@ -71,6 +71,7 @@ ul.ratings{
     right: 40%;
     top: -50px;
     box-shadow: 4px 4px 10px 3px rgba(0, 0, 0, .5);
+    z-index: 99999;
 }
 .poster {
     width: 150px;
